# smhkd

./: .clang-format  .clang-tidy  .clangd  .gitignore  .lsan-suppressions  CMakeLists.txt  LICENSE  README.md  justfile
examples/: doc  doc.ebnf  example  raku.pm  smhkdrc  test.smhkdrc
include/: ast.hpp  ast_printer.hpp  chord.hpp  cli.hpp  config_properties.hpp  hotkey.hpp  interpreter.hpp  key_handler.hpp  key_observer_handler.hpp  keysym.hpp  locale.hpp  log.hpp  modifier.hpp  parser.hpp  process.hpp  service.hpp  token.hpp  tokenizer.hpp  utils.hpp
src/: ast.ixx  ast_printer.cpp  ast_printer.ixx  chord.cpp  chord.ixx  cli.cpp  cli.ixx  hotkey.cpp  hotkey.ixx  interpreter.cpp  interpreter.ixx  key_handler.cpp  key_handler.ixx  key_observer_handler.cpp  key_observer_handler.ixx  keysym.cpp  keysym.ixx  locale.cpp  locale.ixx  log.ixx  main.cpp  modifier.cpp  modifier.ixx  parser.cpp  parser.ixx  process.cpp  service.cpp  token.ixx  tokenizer.cpp  tokenizer.ixx  utils.cpp  utils.hpp  utils.ixx
src/cli/: application.cpp  application.hpp  cli.cpp  cli.hpp  cli.ixx  main.cpp
src/common/: cf_string.cpp  cf_string.hpp  command.cpp  command.hpp  config_path.cpp  config_path.hpp  front_app.hpp  front_app.mm  log.hpp  signpost.hpp  string_util.cpp  string_util.hpp  string_util.mm
src/input/: chord.cpp  chord.hpp  chord.ixx  hotkey.hpp  hotkey.ixx  keysym.cpp  keysym.hpp  keysym.ixx  locale.cpp  locale.hpp  locale.ixx  log.hpp  log.ixx  modifier.cpp  modifier.hpp  modifier.ixx
src/lang/: ast.hpp  ast.ixx  ast_printer.ixx  config_loader.cpp  config_loader.hpp  interpreter.cpp  interpreter.hpp  interpreter.ixx  parser.cpp  parser.hpp  parser.ixx  token.hpp  token.ixx  tokenizer.cpp  tokenizer.hpp  tokenizer.ixx
src/runtime/: hotkey_engine.cpp  hotkey_engine.hpp  key_handler.cpp  key_handler.hpp  key_handler.ixx  key_observer_handler.cpp  key_observer_handler.hpp  key_observer_handler.ixx  process.cpp  process.hpp  process.ixx  service.cpp  service.hpp  service.ixx
tests/: test_interpreter.cpp  test_parser.cpp  test_tokenizer.cpp
